--- a/views/homepage/QuizCompleted.ejs
+++ b/views/homepage/QuizCompleted.ejs
@@ -13,12 +13,9 @@
             Quiz Completed
         </h1>
         <h1>
-            <%= sub %>
+            Answer Code:<%= sub %>
         </h1>
         <h1>
-            <% if (name!=undefined) { %>
-                <%=name%> 
-            <% } %>
         </h1>
         <h1>
             <%= ca %>/<%= l %>
