minor code changes

--- a/views/homepage/QuizCompleted.ejs
+++ b/views/homepage/QuizCompleted.ejs
@@ -18,7 +18,7 @@
         <h1>
         </h1>
         <h1>
-            <%= ca %>/<%= l %>
+            <%= ca %>/<%= length %>
             Are Correct
         </h1>
 
