--- a/views/portal/Login.ejs
+++ b/views/portal/Login.ejs
@@ -14,10 +14,10 @@
         <img src="/modules/Images/Logo.jpg" alt="Logo">
         <h3>Email ID</h3>
         <div>
-            <input name="email" id="email" type="text" placeholder="example@abc.com">
+            <input name="email" required id="email" type="text" placeholder="example@abc.com">
         </div>
         <h3>Password</h3>
-        <input id="lpassword" name="lpassword" type="password" placeholder="Password" >
+        <input id="lpassword" required name="lpassword" type="password" placeholder="Password" >
         <button id="bt1" type="submit" >Login</button>
         <a class="LR" href="register">>>Want to Register </a>
         <h3><%- include('./error.ejs') %></h3>
