--- a/views/portal/Register.ejs
+++ b/views/portal/Register.ejs
@@ -11,13 +11,13 @@
         <di class="Want">
         <img src="/modules/Images/Logo.jpg" alt="Logo">
         <h3>Username</h3>
-        <input name="rname"  type="text" placeholder="Username" >
+        <input name="rname" required type="text" placeholder="Username" >
         <h3>Email ID</h3>
-        <input name="email" id="email" type="email" placeholder="example@abc.com" >
+        <input name="email" required id="email" type="email" placeholder="example@abc.com" >
         <h3>Password</h3>
-        <input name="rpassword" id="rpassword" type="password" placeholder="Password" >
+        <input name="rpassword" required id="rpassword" type="password" placeholder="Password" >
         <h3>Confirm Password</h3>
-        <input name="rcpassword" id="rcpassword" type="password" placeholder="Confirm Password" >
+        <input name="rcpassword" required id="rcpassword" type="password" placeholder="Confirm Password" >
         <button id="bt2" type="submit" >Confirm</button>
         <a href="login">>>Want to Login </a>
         </div>
